Does standard modes on sensor and starts on low power mode

--- a/ECS.bib
+++ b/ECS.bib
@@ -172,3 +172,24 @@ Fritzing homepage
   year = {2016},
   url = {https://play.google.com/store/apps/details?id=com.chrystianvieyra.physicstoolboxsuite&hl=en_GB}
 }
+
+MPU6050 Product Specification
+@MISC{sensor_specs,
+	author = {InvenSense},
+	url = {https://www.cdiweb.com/datasheets/invensense/MPU-6050_DataSheet_V3%204.pdf},
+	title = {MPU6050 Product Specification}
+	note = {Rev 3.4}
+}
+
+MPU6050 Register Map
+@MISC{sensor_registers,
+	author = {InvenSense},
+	url = {http://www6.in.tum.de/pub/Main/TeachingWs2015SeminarAuonomousFahren/RM-MPU-6000A.pdf},
+	title = {MPU6050 Register Map and Description},
+	note = {Rev 4.0}
+}
+
+Raw sensor values explained
+@MISC{sensor_raw_explanation,
+	url = {http://www.i2cdevlib.com/forums/topic/4-understanding-raw-values-of-accelerometer-and-gyrometer/},
+	title = {MPU6050 raw value explanation}
