Adds an extra note for reminder

--- a/hardware/mbed.tex
+++ b/hardware/mbed.tex
@@ -1,5 +1,6 @@
 \namedsection{mBed}{Gupta}
 
+\note{Go through all tables and add references where required}
 \note{Add a plan?}
 
 \subsection{Introduction}
