Added refs to intro

--- a/ECS.bib
+++ b/ECS.bib
@@ -177,7 +177,7 @@ MPU6050 Product Specification
 @MISC{sensor_specs,
 	author = {InvenSense},
 	url = {https://www.cdiweb.com/datasheets/invensense/MPU-6050_DataSheet_V3%204.pdf},
-	title = {MPU6050 Product Specification}
+	title = {MPU6050 Product Specification},
 	note = {Rev 3.4}
 }
 
@@ -188,8 +188,53 @@ MPU6050 Register Map
 	title = {MPU6050 Register Map and Description},
 	note = {Rev 4.0}
 }
-
+ 
 Raw sensor values explained
 @MISC{sensor_raw_explanation,
 	url = {http://www.i2cdevlib.com/forums/topic/4-understanding-raw-values-of-accelerometer-and-gyrometer/},
 	title = {MPU6050 raw value explanation}
+}
+
+@inproceedings{iot_power,
+  title={Low voltage devices and circuits for energy-starved systems},
+  author={Vitale, S.A.},
+  pages={1--3},
+  year={2015},
+  month={Oct},
+  publisher={IEEE},
+  booktitle={SOI-3D-Subthreshold Microelectronics Technology Unified Conference (S3S)},
+  doi={10.1109/S3S.2015.7333497}
+}
+
+@inproceedings{iot_saftey,
+  title={The Effect of Hardware Platform Selection on Safety-Critical Software in Embedded Systems: Empirical Evaluations},
+  author={Salewski, F. and Kowalewski, S.},
+  pages={78--85},
+  year={2007},
+  month={July},
+  publisher={IEEE},
+  booktitle={International Symposium on Industrial Embedded Systems},
+  doi={10.1109/SIES.2007.4297320}
+}
+
+@article{arm_sub,
+  title={A Subthreshold ARM Cortex-M0+ Subsystem in 65 nm CMOS for WSN Applications with 14 Power Domains, 10T SRAM, and Integrated Voltage Regulator},
+  author={Myers, J. and Savanth, A. and Gaddh, R. and Howard, D. and Prabhat, P. and Flynn, D.},
+  pages={31--44},
+  year={2015},
+  month={October},
+  publisher={IEEE},
+  journal={IEEE Journal of Solid-State Circuits},
+  doi={10.1109/JSSC.2015.2477046}
+}
+
+@inproceedings{iot_saftey2,
+  title={A Bridge from System to Software Development for Safety-Critical Automotive Embedded Systems},
+  author={Mader, R. and Griessnig, G. and Armengaud, E. and Leitner, A. and Kreiner, C. and Bourrouilh, Q. and Steger, C. and Weiss, R.},
+  pages={75--79},
+  year={2012},
+  month={Sept},
+  publisher={IEEE},
+  booktitle={38th EUROMICRO Conference on Software Engineering and Advanced Applications (SEAA)},
+  doi={10.1109/SEAA.2012.61}
+}
