Changed DVT Citation to academic paper

--- a/ECS.bib
+++ b/ECS.bib
@@ -20,13 +20,6 @@ Speaks about the feasibility of recognising foot gestures using an accelerometer
 	organization={ACM}
 }
 
-@MISC{NHS2014DVT,
-  author = {NHS},
-  title = {Deep vein thrombosis},
-  year = {2014},
-  url = {http://www.nhs.uk/conditions/deep-vein-thrombosis/pages/introduction.aspx}
-}
-
 @MISC{virgin2015exercises,
   author = {Virgin Atlantic},
   title = {Inflight exercise},
@@ -237,4 +230,15 @@ Raw sensor values explained
   publisher={IEEE},
   booktitle={38th EUROMICRO Conference on Software Engineering and Advanced Applications (SEAA)},
   doi={10.1109/SEAA.2012.61}
+}
+
+@article{dvt,
+  title={History of deep vein thrombosis is a discriminator for concomitant atrial fibrillation in pulmonary embolism},
+  author={Mader, R. and Griessnig, G. and Armengaud, E. and Leitner, A. and Kreiner, C. and Bourrouilh, Q. and Steger, C. and Weiss, R.},
+  pages={899--906},
+  year={2015},
+  month={Nov},
+  publisher={Elsevier Ltd},
+  booktitle={Thrombosis Research},
+  doi={doi:10.1016/j.thromres.2015.08.024}
 }
