Moved to down Gantt charts

--- a/appendices/gantt.tex
+++ b/appendices/gantt.tex
@@ -1,30 +1,18 @@
 \chapter{Gantt charts}\label{ch:gantt}
 
-The following 4 pages show our planned Gantt charts.
+The following 2 pages show our planned Gantt charts.
 
 \begin{landscape}
 
 \begin{table}
-    \includegraphics{figures/half-term-1.pdf}
-    \caption{Gantt chart: initial falf of term 1}
+    \includegraphics[scale=0.7]{figures/half-term-1.pdf}
+    \caption{Gantt chart: Term 1}
     \label{table:gantt:term11}
-\end{table}
-
-\begin{table}
-    \includegraphics{figures/hardware-gantt.pdf}
-    \caption{Gantt chart: Hardware development work}
-    \label{table:gantt:hardware}
-\end{table}
-
-\begin{table}
-    \includegraphics{figures/half-term-2.pdf}
-    \caption{Gantt chart: Second half of term 1}
-    \label{table:gantt:term12}
 \end{table}
 
 \begin{table}[h!]
     \includegraphics{figures/report-gantt.pdf}
-    \caption{Gantt chart: after christmas}
+    \caption{Gantt chart: Term 2}
     \label{table:gantt:report}
 \end{table}
 
