Reference for Sigmoid

--- a/ECS.bib
+++ b/ECS.bib
@@ -239,6 +239,17 @@ Raw sensor values explained
   year={2015},
   month={Nov},
   publisher={Elsevier Ltd},
-  booktitle={Thrombosis Research},
+  journal={Thrombosis Research},
   doi={doi:10.1016/j.thromres.2015.08.024}
+}
+
+@article{sigmoid_approx,
+  title={Approximation of sigmoid function and the derivative for hardware implementation of artificial neurons},
+  author={Basterretxea, K. and Tarela, J.M. and del Campo, I.},
+  pages={18--24},
+  year={2014},
+  month={Feb},
+  publisher={IET},
+  journal={Circuits, Devices and Systems, IEE Proceedings},
+  doi={10.1049/ip-cds:20030607}
 }
