--- a/software/development.tex
+++ b/software/development.tex
@@ -6,7 +6,7 @@ The Multilayer Perceptron is a good fit for a subthreshold Cortex M0+ as it does
 \subsection{Sigmoid Function}
 The sigmoid function is applied to each node's output, after the summation of its weighted inputs is calculated, as discussed above in section \ref{sec:weka-code}; its graph and equation is shown below in figure \ref{fig:sigmoid}. Clearly, this equation causes two issues for the proposed device: firstly, it requires division, and secondly it requires the use of the constant \verb|e|, which is a non-integer; using this in an operation involving powers could potentially prove expensive.
 
-The first area of note in this graph is that the value of $f(t)$ quickly starts to tend towards 0 in the negative direction, and 1 in the positive direction. It is not uncommon\todo{REF}, therefore, to approximate the value of the function at these extremes. Figure \ref{fig:sigmoid-ends} shows this approximation highlighted in blue for \verb|t| values outside of the range between 5 and -5; it is plain to see that the error introduced here is minimal.
+The first area of note in this graph is that the value of $f(t)$ quickly starts to tend towards 0 in the negative direction, and 1 in the positive direction. It is not uncommon, therefore, to approximate the value of the function at these extremes \cite{sigmoid_approx}. Figure \ref{fig:sigmoid-ends} shows this approximation highlighted in blue for \verb|t| values outside of the range between 5 and -5; it is plain to see that the error introduced here is minimal.
 
 \begin{figure}[!h]
     \centering
