--- a/hardware/sensor.tex
+++ b/hardware/sensor.tex
@@ -68,7 +68,7 @@ The sensitivities that the accelerometer can operate at range between $\pm 2$ to
 
 The sensor also supports a low power accelerometer which uses only the accelerometer at a configured frequency. This takes less current than typical usage, however is dependant on the sampling frequency of the accelerometer, see Table~\ref{tab:sensor:wake}. This is done by putting the device into a cyclic sleep mode where it wakes up at the wake frequency to take a single set of readings from the accelerometer before going back to sleep. 
 
-To accomplish this, two registers need to be interacted with, Registers 107 and 108, which are Power Management 1 and 2 respectively. Within Register 108, all gyroscope axes need to put into standby mode as described earlier. Within Register 107, the \verb|CYCLE| bit needs to be set as 1 which enables cycle mode. It also requires the \verb|SLEEP| bit set to 0 for the cycle mode to be activated. The next bit is the \verb|TEMP_DIS| bit which disables the temperature sensor when set to 1. These three bits are bits 5, 6, and 3 respectively. Finally, within register 108, the \verb|LP_WAKE_CTRL| bits need to be set which controls the frequency of the device waking up, and hence the frequncy of the accelerometer readings. These are bits 7 and 6, and are described in Table~\ref{tab:sensor:wake} along with typical current consumptions of each. 
+To accomplish this, two registers need to be interacted with, Registers 107 and 108, which are Power Management 1 and 2 respectively. Within Register 108, all gyroscope axes need to put into standby mode as described earlier. Within Register 107, the \verb|CYCLE| bit needs to be set as 1 which enables cycle mode. It also requires the \verb|SLEEP| bit set to 0 for the cycle mode to be activated. The next bit is the \verb|TEMP_DIS| bit which disables the temperature sensor when set to 1. These three bits are bits 5, 6, and 3 respectively. Finally, within register 108, the \verb|LP_WAKE_CTRL| bits need to be set which controls the frequency of the device waking up, and hence the frequency of the accelerometer readings. These are bits 7 and 6, and are described in Table~\ref{tab:sensor:wake} along with typical current consumptions of each. 
 
 \begin{table}
 	\centering
