Add client communication

--- a/management/client.tex
+++ b/management/client.tex
@@ -1,3 +1,14 @@
 \namedsection{Client Communication}{Finch}
 
-\note{TODO}
+Throughout the project, communication was maintained with the projects customer, ARM. Specifically, contact was made with James Myers and Rohan Gaddh who are researchers at ARM and are involved with low power and sub-threshold systems. It was decided it would be better for one person in the team to handle communication over email in order to simplify the exchange of information.
+
+\subsection{Initial Meeting}
+At the start of the project, a meeting was held between the group and the customers to clarify the specifics of the project. This explained ARMs interest in seeing what was possible in terms of running more sophisticated algorithms on the constrained device where both data collection and processing were happening at the same time. The details of these constraints were also formally laid out.
+
+It was also at this point that the decision was made to emulate the Cortex-M0+ using both an FPGA and mBed as each offered some distinct advantages which paved the way for much of the hardware side of the project.
+
+\subsection{Further Contact}
+During the project occasional contact was made via email between the group and customer when further points needed to be clarified. James was also able to attend the second progress seminar where he was able to see the groups presentation on the progress they have made so far.
+
+\subsection{Customer Satisfaction}
+Near to the end of the project, James was told what the group had managed to achieve and asked whether he was satisfied with this progress. He said he was and the details of this can be seen in Appendix \ref{app:customer}
